# dgcnn_voting

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  preprocessing.py  setup.py  tensorboard.py  test.py  train.py
dataset/: ModelNet.py  ScanNet.py  ScanObjectNN.py  ShapeNetSem.py  __init__.py  dataset_utils.py
include/: tinyply.h
include/v4r_cad2real_object_classification/: graph_visualization.h  parameters.h  py_graph_construction.h  scope_time.h
models/: EdgeConv.py  GAT.py  SKP_KPConv.py  __init__.py  base_model.py  convolution_ops.py  kernel_points.py  layers.py
models/tf_ops/grouping/: tf_grouping_compile.sh
models/tf_ops/sampling/: 1.pkl  tf_sampling.py  tf_sampling_compile.sh
src/: CMakeLists.txt  CONVEX.TMP  HARRIS.TMP  augmentation_preprocessing.cpp  graph_utils.cpp  py_graph_construction.cpp  py_graph_construction.pyx
utils/: h5_creation.py  logger.py  params.py  singleton.py  tf.py  viz.py
